--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Faker==0.8.12
-beautifulsoup4==4.6.0
-matplotlib==2.2.2
-numpy==1.14.2
-pandas==0.22.0
-seaborn==0.8.1
-tabulate==0.8.2
-lxml==4.1.1
+beautifulsoup4
+numpy
+pandas
+tabulate
+lxml
+pytest
